--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,6 +78,7 @@ jobs:
   docker-publish:
     runs-on: ubuntu-latest
     needs: [docker-build]
+    if: ${{ contains(github.event.head_commit.modified, 'test/data/agent-http.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-https.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-socket.dockerfile') || contains(github.event.head_commit.modified, 'test/data/agent-ssh.dockerfile') }}
     environment: "Docker release"
     strategy:
       matrix:
@@ -282,14 +283,6 @@ jobs:
       - run: exit 1
         if: >-
           ${{ contains(needs.*.result, 'failure') || contains(needs.*.result, 'cancelled') || contains(needs.*.result, 'skipped') }}
-
-  publish-pre-release:
-    runs-on: ubuntu-latest
-    if: ${{ github.ref != 'refs/heads/main'}}
-    environment: "NPM pre-release"
-    needs: [local-docker-desktop-tests, remote-docker-engine-tests, local-podman-desktop-tests]
-    steps:
-    - run: echo "Publishing artifacts"
 
   publish-official-release:
     runs-on: ubuntu-latest
