--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -284,13 +284,7 @@ jobs:
   local-docker-desktop-tests:
     runs-on: ${{ matrix.os }}
     needs:
-      [
-        remote-docker-engine-tests,
-        stop-services,
-        http-docker-engine-service,
-        https-docker-engine-service,
-        ssh-docker-engine-service,
-      ]
+      [remote-docker-engine-tests, http-docker-engine-service, https-docker-engine-service, ssh-docker-engine-service]
     defaults:
       run:
         shell: bash
@@ -306,13 +300,7 @@ jobs:
   local-podman-desktop-tests:
     runs-on: ${{ matrix.os }}
     needs:
-      [
-        remote-docker-engine-tests,
-        stop-services,
-        http-docker-engine-service,
-        https-docker-engine-service,
-        ssh-docker-engine-service,
-      ]
+      [remote-docker-engine-tests, http-docker-engine-service, https-docker-engine-service, ssh-docker-engine-service]
     defaults:
       run:
         shell: bash
