--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -239,8 +239,8 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x, 20.x]
-        os: [ubuntu-latest, macos-latest, windows-latest]
         remote-docker-engine: [ssh, http, https]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -294,9 +294,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        docker-desktop: [v1, v2]
         node-version: [16.x, 18.x, 20.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        docker-desktop: [v1, v2]
     steps:
       - uses: actions/checkout@v4
 
@@ -310,11 +310,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        podman-desktop: [v1, v2]
         node-version: [16.x, 18.x, 20.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        podman-desktop: [v1, v2]
     steps:
       - uses: actions/checkout@v4
+      - uses: ./.github/actions/install-podman-desktop
+        with:
+          podman-version: ${{ matrix.podman-desktop }}
 
   # https://github.com/orgs/community/discussions/26822
   pr-can-merge:
