--- a/.github/actions/install-docker-desktop/action.yml
+++ b/.github/actions/install-docker-desktop/action.yml
@@ -23,5 +23,5 @@ runs:
       shell: bash
       run: |
         sudo apt-get update
-        wget https://desktop.docker.com/linux/main/amd64/136059/docker-desktop-4.27.1-amd64.deb?utm_source=docker&utm_medium=webreferral&utm_campaign=docs-driven-download-linux-amd64
+        wget https://desktop.docker.com/linux/main/amd64/136059/docker-desktop-4.27.1-amd64.deb
         sudo apt-get install ./docker-desktop-4.27.1-amd64.deb
