add node_env ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -265,6 +265,7 @@ jobs:
         shell: bash
         run: pnpm build
         env:
+          NODE_ENV: "ci"
           THE_MOBY_EFFECT_TESTING_URL: "unix:///var/run/docker.sock"
 
   stop-services:
