switch to docker outside of docker

--- a/.devcontainer.json
+++ b/.devcontainer.json
@@ -8,10 +8,7 @@
         "ghcr.io/devcontainers/features/node:1": {},
         "ghcr.io/devcontainers/features/github-cli:1": {},
         "ghcr.io/devcontainers/features/common-utils:2": {},
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {
-            "moby": false,
-            "dockerDashComposeVersion": "v2"
-        }
+        "ghcr.io/devcontainers/features/docker-outside-of-docker:1": {}
     },
 
     "customizations": {
@@ -130,6 +127,7 @@
                     "percpu",
                     "Pids",
                     "precpu",
+                    "protobuf",
                     "resolv",
                     "rize",
                     "Rootfs",
@@ -151,6 +149,7 @@
                     "Templating",
                     "Tmpfs",
                     "tsdoc",
+                    "typeclass",
                     "UIDGID",
                     "Ulimits",
                     "Unlockkey",
