--- a/jest.config.json
+++ b/jest.config.json
@@ -1,10 +1,14 @@
 {
     "extends": "@rushstack/heft-jest-plugin/includes/jest-shared.config.json",
     "roots": ["<rootDir>/dist"],
-    "testMatch": ["<rootDir>/dist/test/**/*.test.js"],
-    "collectCoverageFrom": ["<rootDir>/dist/src/**/*.js", "<rootDir>/dist/bin/**/*.js"],
+
     "globalSetup": "<rootDir>/dist/test/setup.js",
+    "globalTeardown": "<rootDir>/dist/test/teardown.js",
+    "testMatch": ["<rootDir>/dist/test/**/*.test.js"],
+
     "collectCoverage": true,
     "coverageProvider": "v8",
+    "collectCoverageFrom": ["<rootDir>/dist/src/**/*.js", "<rootDir>/dist/bin/**/*.js"],
+
     "maxWorkers": 1
 }
