--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ env:
   docker-desktop-versions: "['v1', 'v2', 'v3']"
   podman-desktop-versions: "['v1', 'v2', 'v3']"
   docker-engine-versions: "['v1', 'v2', 'v3', 'v4', 'v5']"
-  docker-engine-variants: "['ssh', 'http', 'https', 'socket']"
   os-variants: "['ubuntu-latest', 'macos-latest', 'windows-latest']"
+  docker-engine-connection-variants: "['ssh', 'http', 'https', 'socket']"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -26,9 +26,9 @@ jobs:
       os-variants: ${{ steps.compute-matricies.outputs.os-variants }}
       node-versions: ${{ steps.compute-matricies.outputs.node-versions }}
       docker-engine-versions: ${{ steps.compute-matricies.outputs.docker-engine-versions }}
-      docker-engine-variants: ${{ steps.compute-matricies.outputs.docker-engine-variants }}
       docker-desktop-versions: ${{ steps.compute-matricies.outputs.docker-desktop-versions }}
       podman-desktop-versions: ${{ steps.compute-matricies.outputs.podman-desktop-versions }}
+      docker-engine-connection-variants: ${{ steps.compute-matricies.outputs.docker-engine-connection-variants }}
       remote-docker-engine-service-indicies: ${{ steps.compute-matricies.outputs.remote-docker-engine-service-indicies }}
       remote-docker-engine-service-identifiers: ${{ steps.compute-matricies.outputs.remote-docker-engine-service-identifiers }}
     steps:
@@ -37,9 +37,9 @@ jobs:
           echo "os-variants=${{ env.os-variants }}" >> $GITHUB_OUTPUT
           echo "node-versions=${{ env.node-versions }}" >> $GITHUB_OUTPUT
           echo "docker-engine-versions=${{ env.docker-engine-versions }}" >> $GITHUB_OUTPUT
-          echo "docker-engine-variants=${{ env.docker-engine-variants }}" >> $GITHUB_OUTPUT
           echo "docker-desktop-versions=${{ env.docker-desktop-versions }}" >> $GITHUB_OUTPUT
           echo "podman-desktop-versions=${{ env.podman-desktop-versions }}" >> $GITHUB_OUTPUT
+          echo "docker-engine-connection-variants=${{ env.docker-engine-connection-variants }}" >> $GITHUB_OUTPUT
 
           output1="["
           for ((i=1; i<=${{ env.remote-docker-engine-service-count }}; i++)); do
@@ -100,7 +100,7 @@ jobs:
     needs: [compute-matricies]
     strategy:
       matrix:
-        dockerfile: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-variants) }}
+        dockerfile: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-connection-variants) }}
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
@@ -137,7 +137,7 @@ jobs:
     environment: "Docker release"
     strategy:
       matrix:
-        dockerfile: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-variants) }}
+        dockerfile: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-connection-variants) }}
     permissions:
       contents: read
       packages: write
@@ -212,7 +212,7 @@ jobs:
         os: ${{ fromJSON(needs.compute-matricies.outputs.os-variants) }}
         node-version: ${{ fromJSON(needs.compute-matricies.outputs.node-versions) }}
         remote-docker-engine-version: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-versions) }}
-        remote-docker-engine-variant: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-variants) }}
+        docker-engine-connection-variant: ${{ fromJSON(needs.compute-matricies.outputs.docker-engine-connection-variants) }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
