--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
         "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
         "@types/uuid": "9.0.8",
+        "ci-info": "^4.0.0",
         "cross-env": "7.0.3",
         "effect": "2.2.5",
         "eslint": "8.56.0",
