--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "@types/ssh2": "1.11.19",
         "@types/tar-fs": "2.0.4",
         "@types/uuid": "9.0.8",
-        "ci-info": "^4.0.0",
+        "ci-info": "4.0.0",
         "cross-env": "7.0.3",
         "effect": "2.2.5",
         "eslint": "8.56.0",
@@ -71,6 +71,7 @@
         "typescript": "5.3.3",
         "uuid": "9.0.1",
         "webpack": "5.82.1",
+        "wireguard-tools.js": "1.8.1",
         "ws": "8.16.0"
     },
     "peerDependencies": {
