--- a/.github/workflows/debug.yml
+++ b/.github/workflows/debug.yml
@@ -4,12 +4,12 @@ on: [workflow_dispatch]
 
 jobs:
   debug1:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: mxschmitt/action-tmate@v3
 
   debug2:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: mxschmitt/action-tmate@v3
 
