--- a/.github/actions/workflow-level-service/connect/action.yml
+++ b/.github/actions/workflow-level-service/connect/action.yml
@@ -13,6 +13,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: "Install wireguard linux"
+      if: runner.os == 'Linux'
+      run: sudo apt-get install -y --no-install-recommends wireguard
+
     - uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
