--- a/.github/actions/workflow-level-service/expose/action.yml
+++ b/.github/actions/workflow-level-service/expose/action.yml
@@ -17,6 +17,7 @@ runs:
   using: "composite"
   steps:
     - name: "Install wireguard linux"
+      shell: bash
       if: runner.os == 'Linux'
       run: sudo apt-get install -y --no-install-recommends wireguard
 
